--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,6 +5,7 @@
     <title>{{ page.title }}</title>
     <link href="{{ "/assets/images/sejaflow_icon.ico" | relative_url }}" rel="icon">
     <link rel="stylesheet" href="{{ "/assets/css/styles.css" | relative_url }}" rel="stylesheet">
+    <link rel="stylesheet" href="https://use.typekit.net/fca6bhr.css">
     <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Comfortaa" />
     <link href="https://fonts.googleapis.com/css?family=Pacifico&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
