--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -18,7 +18,7 @@
 .page-container > h1 {
   font-size: 8vw;
   text-align: center;
-  font-family: peachy-keen-jf, sans-serif;
+  font-family: "Pacifico", cursive;
 }
 
 .page-container > h2 {
